# Experimento_agentes_IA

./: .gitignore  README.md  criar_experimento.sh  pyproject.toml
.template/: technical_report.md
experimentos/2024-06-05_14-46-40/: main.py  technical_report.md
experimentos/2024-06-05_15-29-02/: main.py  technical_report.md
experimentos/2024-06-10_14-04-36/: main.py  technical_report.md
